# system-health-api

./: .dockerignore  .gitignore  Architecture.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/exceptions/: api_exception.py  exception_handler.py
app/models/: component.py  health_response.py
app/services/: bfs_traversal.py  dag_builder.py  graph_visualizer.py  health_aggregator.py  health_checker.py
app/utils/: logger.py
app/validators/: dag_validator.py
terraform/: main.tf  outputs.tf  provider.tf  variables.tf
tests/: conftest.py  test_api_exception.py  test_bfs_traversal.py  test_dag_builder.py  test_dag_validator.py  test_exception_handler.py  test_graph_visualizer.py  test_health_aggregator.py  test_health_checker.py  test_logger.py  test_main.py
