[project]
name = "system-health-api"
version = "0.1.0"
description = ""
authors = [
    {name = "varisai"}
]
requires-python = ">=3.12, !=3.14.1"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "graphviz (>=0.21,<0.22)",
    "prometheus-client (>=0.25.0,<0.26.0)",
    "starlette (>=1.3.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
